[metadata]
name = h2client
version = 0.0.3
author = Timothy Moore
author-email = mtimothy984@gmail.com
long-description = file: README.md
long-description-content-type = text/markdown
requires-dist = setuptools
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    h2client
extra_files =
    LICENSE.txt

[options]
install-requires =
    h2
    httpx
    diskcache
