[metadata]
name = h2client
version = 0.1.1
author = Timothy Moore
author-email = mtimothy984@gmail.com
url = https://github.com/tjstretchalot/h2client
description = A connection-aware, cache-control respecting http/2 over tls client
long-description = file: README.md
long-description-content-type = text/markdown
requires-dist = setuptools
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[files]
extra-files =
    LICENSE.txt

[options]
packages =
    h2client
install-requires =
    h2
    httpx
    diskcache
