[metadata]
name = h2client
version = 0.2.3
author = Timothy Moore
author_email = mtimothy984@gmail.com
url = https://github.com/tjstretchalot/h2client
description = A connection-aware, cache-control respecting http/2 over tls client
long_description = file: README.md
long_description_content_type = text/markdown
requires_dist = setuptools
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    h2client
install_requires =
    h2
    httpx
    diskcache
